--- a/game/client.css
+++ b/game/client.css
@@ -1,8 +1,11 @@
-
 html {
     background: #d1c8Bd;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
+}
+
+body {
+    margin: 0;
 }
 
 #container {
